# pathsync

./: AGENTS.md  Cargo.toml  README.md  skills-lock.json
.codex/agents/: cli-developer.toml  code-mapper.toml  docs-researcher.toml  documentation-engineer.toml  rust-engineer.toml  test-automator.toml
.tickets/: pat-0f56.md  pat-1hg3.md  pat-22g6.md  pat-3xkt.md  pat-56w2.md  pat-7isp.md  pat-b7qn.md  pat-g32k.md  pat-l0h3.md  pat-m5jd.md  pat-nbjf.md  pat-qgou.md  pat-ued4.md  pat-wifr.md
docs/plans/: 2026-03-29-adaptive-weighted-concurrency.md  2026-03-29-pathsync-hardening.md  2026-03-29-progress-ui-improvements.md  2026-03-30-canonical-progress-ui-design.md  2026-03-30-canonical-progress-ui-implementation.md  2026-03-30-console-progress-ui.md
examples/: config.toml
src/: config.rs  copy.rs  copy_fast_path.rs  date.rs  error.rs  format.rs  lib.rs  main.rs  plan.rs  policy.rs  progress_format.rs  progress_model.rs
tests/: config_date.rs  copy_integration.rs  plan_layout.rs  progress_format.rs  progress_model.rs  public_api.rs
